--- a/containmentfacilities.html
+++ b/containmentfacilities.html
@@ -112,32 +112,18 @@
             <li><strong>Epsilon-3:</strong> Potential bioweapon or mass-destruction capabilities; top-priority containment.</li>
         </ul>
 
-        <h2>Ζ ζ - Zeta (Special Cases)</h2>
+        <h2>Ζ ζ - Zeta (Uncontained)</h2>
         <ul>
-            <li><strong>Zeta-1:</strong> Require unconventional or experimental containment methods.</li>
-            <li><strong>Zeta-2:</strong> Symbiotic or intertwined with key personnel, technology, or other Aberrations.</li>
-            <li><strong>Zeta-3:</strong> Involving alien technology or cosmic phenomena.</li>
+            <li><strong>Zeta-1:</strong> Known and monitored but currently uncontainable due to resource or technological limitations.</li>
+            <li><strong>Zeta-2:</strong> Actively evading containment efforts, posing significant threat.</li>
+            <li><strong>Zeta-3:</strong> Unknown whereabouts; high priority for retrieval and containment.</li>
         </ul>
 
-        <h2>Η η - Eta (Uncontained)</h2>
+        <h2>Η η - Eta (Special Cases)</h2>
         <ul>
-            <li><strong>Eta-1:</strong> Known and monitored but currently uncontainable due to resource or technological limitations.</li>
-            <li><strong>Eta-2:</strong> Actively evading containment efforts, posing significant threat.</li>
-            <li><strong>Eta-3:</strong> Unknown whereabouts; high priority for retrieval and containment.</li>
-        </ul>
-
-        <h2>Θ θ - Theta (Experimental)</h2>
-        <ul>
-            <li><strong>Theta-1:</strong> Require specific containment strategies due to their unique properties.</li>
-            <li><strong>Theta-2:</strong> Demonstrate anomalous interactions with known physical laws.</li>
-            <li><strong>Theta-3:</strong> Exhibit behavior or properties that are not yet fully understood or classified.</li>
-        </ul>
-
-        <h2>Ι ι - Iota (Psychological)</h2>
-        <ul>
-            <li><strong>Iota-1:</strong> Interact with or manipulate cognitive functions or perceptions.</li>
-            <li><strong>Iota-2:</strong> Capable of inducing psychological or emotional changes in individuals.</li>
-            <li><strong>Iota-3:</strong> Pose significant risks due to their ability to affect large populations mentally.</li>
+            <li><strong>Eta-1:</strong> Require unconventional or experimental containment methods.</li>
+            <li><strong>Eta-2:</strong> Symbiotic or intertwined with key personnel, technology, or other Aberrations.</li>
+            <li><strong>Eta-3:</strong> Involving alien technology or cosmic phenomena.</li>
         </ul>
     </div>
 </body>
