--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -121,7 +121,7 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-001</p>
                 <p><strong>Codename:</strong> Nephological Entity</p>
-                <p><strong>Threat Level:</strong> Class III: Hazardous</p>
+                <p><strong>Threat Level:</strong> Class III: Controllable</p>
                 <p><strong>Containment Level:</strong> Gamma-3</p>
             </div>
             <div class="image-container">
