--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -107,7 +107,7 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-002 "Voidshadow"</p>
-                <p><strong>Threat Level:</strong> Class IV: Critical</p>
+                <p><strong>Threat Level:</strong> Class V: Critical</p>
                 <p><strong>Containment Level:</strong> Delta-1</p>
             </div>
             <div class="image-container">
