--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -121,8 +121,8 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-001</p>
                 <p><strong>Codename:</strong> Nephological Entity</p>
-                <p><strong>Threat Level:</strong> Class III: Controllable</p>
-                <p><strong>Containment Level:</strong> Gamma-3</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Level:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-001">
