--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-002 "Voidshadow"</p>
-                <p><strong>Threat Level:</strong> Class V: Critical</p>
-                <p><strong>Containment Level:</strong> Delta-1</p>
+                <p><strong>Threat Level:</strong> 07</p>
+                <p><strong>Containment Sector:</strong> Delta-3</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-002/Image%20of%20ABR-002.jpg" alt="Image of ABR-002">
