--- a/Aberrations/ABR-003/ABR003.html
+++ b/Aberrations/ABR-003/ABR003.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-003 "The Unseen Stalker"</p>
-                <p><strong>Threat Level:</strong> Class V: Critical</p>
-                <p><strong>Containment Level:</strong> Zeta-2</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Sector:</strong> Epsilon-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-003/Image%20of%20ABR-003.jpg" alt="Image of ABR-003">
