--- a/Aberrations/ABR-004/ABR004.html
+++ b/Aberrations/ABR-004/ABR004.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-004 - The Oracle Terminal</p>
-                <p><strong>Threat Level:</strong> Class V: Critical</p>
-                <p><strong>Containment Level:</strong> Delta-2</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Sector:</strong> Gamma-3</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-004/Image%20of%20ABR004.jpg" alt="Image of ABR-004">
