--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-005 "The Embrace of Eudaimonia"</p>
-                <p><strong>Threat Level:</strong> Class 0: Beneficial</p>
-                <p><strong>Containment Level:</strong> Alpha-1</p>
+                <p><strong>Threat Level:</strong> -04</p>
+                <p><strong>Containment Sector:</strong> Alpha-1</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-005/CCTV%20Image%20of%20ABR-005.webp" alt="Image of ABR-005">
