--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -108,7 +108,7 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-002 "Voidshadow"</p>
                 <p><strong>Threat Level:</strong> 07</p>
-                <p><strong>Containment Sector:</strong> Delta-3</p>
+                <p><strong>Containment Division:</strong> Delta-3</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-002/Image%20of%20ABR-002.jpg" alt="Image of ABR-002">
