--- a/Aberrations/ABR-006/ABR006.html
+++ b/Aberrations/ABR-006/ABR006.html
@@ -108,7 +108,7 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-006</p>
                 <p><strong>Threat Level:</strong> 05</p>
-                <p><strong>Containment Sector:</strong> Delta-2</p>
+                <p><strong>Containment Division:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-006/Artists%20concept%20of%20ABR-006%20as%20capturing%20this%20ABR%20on%20image%20has%20not%20yet%20been%20achieved.jpg" alt="Image of ABR-006">
