--- a/Aberrations/ABR-007/ABR007.html
+++ b/Aberrations/ABR-007/ABR007.html
@@ -107,7 +107,7 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-007 Luminous Halo</p>
-                <p><strong>Threat Level:</strong> Class II: Controllable</p>
+                <p><strong>Threat Level:</strong> 02</p>
                 <p><strong>Containment Level:</strong> Zeta-1</p>
             </div>
             <div class="image-container">
