--- a/Aberrations/ABR-008/ABR008.html
+++ b/Aberrations/ABR-008/ABR008.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-008 Bone Sculptor</p>
-                <p><strong>Threat Level:</strong> Class III: Hazardous</p>
-                <p><strong>Containment Level:</strong> Gamma-2</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Level:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-008/Image%20of%20ABR-008.jpg" alt="Image of ABR-008">
