--- a/Aberrations/ABR-007/ABR007.html
+++ b/Aberrations/ABR-007/ABR007.html
@@ -108,7 +108,7 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-007 Luminous Halo</p>
                 <p><strong>Threat Level:</strong> 02</p>
-                <p><strong>Containment Level:</strong> Zeta-1</p>
+                <p><strong>Containment Division:</strong> Zeta-1</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-007/Image%20of%20ABR-007%20captured%20over%20a%20lake.jpg" alt="Image of ABR-007">
