--- a/Aberrations/ABR-009/ABR009.html
+++ b/Aberrations/ABR-009/ABR009.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-009 "Bobble the Clown"</p>
-                <p><strong>Threat Level:</strong> Class IV: Critical</p>
-                <p><strong>Containment Level:</strong> Delta-3</p>
+                <p><strong>Threat Level:</strong> 07</p>
+                <p><strong>Containment Division:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-009/Image%20of%20ABR-009.jpg" alt="Image of ABR-009">
