--- a/Aberrations/ABR-008/ABR008.html
+++ b/Aberrations/ABR-008/ABR008.html
@@ -108,7 +108,7 @@
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-008 Bone Sculptor</p>
                 <p><strong>Threat Level:</strong> 06</p>
-                <p><strong>Containment Level:</strong> Delta-2</p>
+                <p><strong>Containment Division:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-008/Image%20of%20ABR-008.jpg" alt="Image of ABR-008">
