--- a/Aberrations/ABR-010/ABR010.html
+++ b/Aberrations/ABR-010/ABR010.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-010 "The Toothpick"</p>
-                <p><strong>Threat Level:</strong> Class III: Hazardous</p>
-                <p><strong>Containment Level:</strong> Gamma-2</p>
+                <p><strong>Threat Level:</strong> 05</p>
+                <p><strong>Containment Division:</strong> Gamma-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-010/ABR-010%2C%20appearing%20as%20just%20a%20regular%20toothpick.jpg" alt="Image of ABR-010">
