--- a/Aberrations/ABR-012/ABR012.html
+++ b/Aberrations/ABR-012/ABR012.html
@@ -113,7 +113,7 @@
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-012/A_detailed%2C_close-up_image_of_a_50_calibre_bullet.jpg" alt="Image of ABR-012">
-                <p>First image of ABR-012</p>
+                <p>ABR-012</p>
             </div>
         </div>
 
