--- a/Aberrations/ABR-013/ABR013.html
+++ b/Aberrations/ABR-013/ABR013.html
@@ -107,8 +107,8 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-013 "The Resonant Metronome"</p>
-                <p><strong>Threat Level:</strong> 06 - High threat with severe consequences</p>
-                <p><strong>Containment Division:</strong> Delta-2 - Exert control or influence over objects, space, or personnel</p>
+                <p><strong>Threat Level:</strong> 06</p>
+                <p><strong>Containment Division:</strong> Delta-2</p>
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-013/A_detailed_image_of_ABR-013%2C_known_as_'The_Resonan.jpg" alt="Image of ABR-013">
